kustomize/base/ing.yaml
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: silly-demo
  labels:
    app.kubernetes.io/name: silly-demo
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: silly-demo
            port:
              number: 8080
    host: devopstoolkitseries.com
